<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="80dp"
    tools:context=".CreateUser">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logoedu" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtNomeCreate"
            android:hint="@string/txtNome"
            android:inputType="textPersonName"
            android:textColorHint="@color/orangeEdu"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtEmailCreate"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/orangeEdu"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/edtSenhaCreate"
            android:hint="@string/txtSenha"
            android:inputType="textPassword"
            android:textColor="@color/orangeEdu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progressCreate"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnCadastrar"
        android:backgroundTint="@color/blueEdu"
        android:textColor="@android:color/white"
        android:text="@string/btnCadastrar"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

</LinearLayout>