<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="80dp"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logoedu" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo">
        <EditText
            android:inputType="textEmailAddress"
            android:hint="@string/txtEmail"
            android:textColorHint="@color/orangeEdu"
            android:textColor="@color/black"
            android:id="@+id/edtEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutEmail"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edtSenhaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/orangeEdu"
            android:hint="@string/txtSenha"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressLogin"
        android:layout_marginTop="35dp"
        android:layout_below="@id/layoutSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnLogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutSenha"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blueEdu"
        android:text="Entrar"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtRegisterUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/txtRegistre"
        android:textColor="@color/black" />

</RelativeLayout>