<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".About">

    <ImageView
        android:id="@+id/imgFace"
        android:layout_width="91dp"
        android:layout_height="85dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/face" />

    <ImageView
        android:id="@+id/imgInsta"
        android:layout_width="81dp"
        android:layout_height="79dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imgFace"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/insta" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/descricao"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:layout_editor_absoluteX="-2dp" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="282dp"
        android:layout_height="137dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoedu" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="285dp"
        android:layout_height="43dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:gravity="center"
        android:text="@string/redes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardQuestionario"
        android:layout_width="413dp"
        android:layout_height="200dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/imgFace"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="90dp"
            android:layout_height="170dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/questionario" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="252dp"
            android:layout_height="48dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/feedback"
            app:layout_constraintStart_toEndOf="@+id/imageView4" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>