<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil">

    <RelativeLayout
        android:id="@+id/relativeFoto"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUser"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="140dp"
            android:layout_marginBottom="10dp"
            android:tint="@color/white"
            app:backgroundTint="@color/blueEdu"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_picture" />
    </RelativeLayout>


<LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/relativeFoto"
        android:weightSum="2"
        android:id="@+id/layout_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_person"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/edtNome"
            android:hint="@string/txtNome"
            android:textColorHint="@color/orangeEdu"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/layout_nome"
        android:id="@+id/layout_cpf"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_cpf"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/edtCpf"
            android:hint="CPF"
            android:textColorHint="@color/orangeEdu"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/layout_cpf"
        android:id="@+id/layout_telefone"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_phone"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/edtTelefone"
            android:hint="Telefone"
            android:textColorHint="@color/orangeEdu"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_below="@id/layout_telefone"
    android:id="@+id/layout_endereco"
    android:weightSum="2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:src="@drawable/ic_location"
        android:layout_weight="1"
        android:layout_width="70dp"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/edtEndereco"
        android:hint="Endereço"
        android:textColorHint="@color/orangeEdu"
        android:inputType="textPersonName"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/layout_endereco"
        android:id="@+id/layout_cidade"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_city"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/edtCidade"
            android:hint="Cidade"
            android:textColorHint="@color/orangeEdu"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/layout_cidade"
        android:id="@+id/layout_email"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_email"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/edtEmail"
            android:hint="@string/txtEmail"
            android:textColorHint="@color/orangeEdu"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/layout_email"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/ic_username"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/edtUsername"
            android:hint="@string/txtUsername"
            android:textColorHint="@color/orangeEdu"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/blueEdu"
        android:text="Logout"
        android:textColor="@android:color/white" />

</RelativeLayout>